feat(credentials): get username by id
